slider_carousel.css
body{
    margin: 0;
    padding: 0;
}
.slide-viewport{
    /*width: 600px;*/
    overflow: hidden;
    max-width: 600px;
    margin: 0 auto;
    position: relative;
    width: 100%;

}
.video-slider{
    display: inline-block;
    position: relative;
    margin: 0;
    padding: 0;
    overflow: hidden;
}
.video-slider li{
    display: inline-block;
    float: left;
    width: 100px;
}
.video-slider li img{
    width: 100%;
}
.img-slider{
    display: inline-block;
    position: relative;
    margin: 0;
    padding: 0;
    overflow: hidden;
}
.img-slider li{
    display: inline-block;
    float: left;
    width: 100%;
    position: relative;
}
.img-slider li img{
    width: 100%;
}
.next, .previous{
    cursor: pointer;
}
.next{
    float: right;
}
.pager li{
    display: inline-block;
    border-radius: 50%;
    background: #000;
    width: 20px;
    height: 20px;
    margin: 0 10px;
    cursor: pointer;
}
.pager li.active{
    background: #999;
}
.slider-wrap{
    padding: 0 50px;
}

